--- a/conf.yaml
+++ b/conf.yaml
@@ -480,6 +480,10 @@ langs:
         name:           Italian (Italy)
         license:        GPL3
         source:         moz:3053
+    kk_KZ:
+        name:           Kazakh
+        license:        MPL 1.1/GPL 2.0/LGPL 2.1
+        source:         http://sourceforge.net/projects/aoo-extensions/files/1172/12/dict-kk.oxt/download
     kn_ID:
         name:           Kannada (India)
         license:        GPL2
