--- a/.classpath
+++ b/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src/java"/>
 	<classpathentry kind="src" path="src/test"/>
 	<classpathentry kind="src" path="src/test-resources"/>
 	<classpathentry kind="src" path="dicts"/>
