--- a/ivy.xml
+++ b/ivy.xml
@@ -17,7 +17,7 @@
   under the License.
 -->
 <!DOCTYPE ivy-module [
-  <!ENTITY lucene.version "4.10.0">
+  <!ENTITY lucene.version "5.0.0-snapshot-1634066">
 ]>
 <ivy-module version="2.0">
   <info organisation="elasticsearch" module="hunspell-tests"/>
